Basic layout of page modified to be more visually appealing and fix appearance on smaller screens

--- a/index.css
+++ b/index.css
@@ -1,3 +1,17 @@
 body,html {
   height: 100%;
 }
+
+.pageContent {
+  height: 50%;
+}
+
+.pageTitle {
+  margin-bottom: 100px;
+}
+
+.sector{
+  border: black 2px solid;
+  border-radius: 5%;
+  padding: 5px;
+}
